--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cli-table3": "^0.6.5",
     "dotenv": "^16.4.7",
+    "figlet": "^1.8.0",
     "inquirer": "^12.3.2",
     "pg": "^8.13.1"
   }
